[package]
name = "olai-uc-object-store"
version = "0.0.1"
description = "object_store implementation backed by Unity Catalog credential vending. Read and write data governed by UC volumes, tables, and external locations."
categories = ["filesystem"]
documentation = "https://docs.rs/olai-uc-object-store"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
# Stable Rust crate identifier, independent of the provisional package name.
name = "unitycatalog_object_store"

[dependencies]
unitycatalog-client = { package = "olai-uc-client", path = "../client", version = "0.0.1", default-features = false }
unitycatalog-common = { package = "olai-uc-common", path = "../common", version = "0.0.1", default-features = false }

async-trait = { workspace = true }
chrono = { workspace = true }
object_store = { workspace = true }
olai-http = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.1"
tokio = { version = "1", features = ["full"] }
