# The in-browser query engine (WASM_QUERY_PREVIEW.md Phase B): mangrove-specific
# glue around `deltalake-wasm` — UC table resolution over the REST API, vended-
# credential storage access, and a wasm-bindgen surface implementing the
# `open_lakehouse.query.v1` runner contract.
#
# This is a STANDALONE workspace, deliberately excluded from the repo root: the
# cdylib needs a size-tuned `[profile.release]` (opt-level="s", lto, ...) and
# wasm-only glue that must not affect the native server build, so it keeps its own
# workspace + Cargo.lock. It carries a `[patch.crates-io]` on the arrow family (the
# roeap arrow-rs fork, rev dc2acae8) whose parquet backs `zstd` per-target — the C
# `zstd` crate on native, pure-Rust `ruzstd` (decode-only) on wasm; `brotli` dropped
# on wasm. The repo ROOT workspace carries the SAME arrow patch + kernel rev, so the
# shared `olai-delta-df` crate resolves identically in both locks.
#
# The async-native (sm_plans-driven) Delta TableProvider — the replacement for the
# eager inline-executor scan path — used to be a sibling member here; it now lives
# in the root workspace as `crates/olai-delta-df` (a native-buildable library) and
# this crate consumes it via a cross-workspace `path = "../olai-delta-df"` dep (see
# `[dependencies]`). This workspace's arrow `[patch.crates-io]` + the `delta_kernel`
# rev it pins unify the kernel `SnapshotRef` types that crate returns with the ones
# `deltalake-core` / `deltalake-wasm` return. See ../../handover-wasm-async-native-table-provider.md.
[workspace]
members = ["."]

[package]
name = "olai-uc-query-wasm"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/open-lakehouse/mangrove"
homepage = "https://unitycatalog.io"
description = "In-browser (wasm32-unknown-unknown) Unity Catalog table preview engine: DataFusion + Delta over UC-vended credentials"
# Floor set by the delta-rs wasm-engine dependency tree (see ../../Cargo.toml
# for the root workspace's matching pin rationale).
rust-version = "1.91"
publish = false

[lib]
name = "query_wasm"
crate-type = ["cdylib", "rlib"]

# The delta-rs wasm engine, pinned by immutable rev to the roeap fork's
# `feat/kernel-snapshot-accessor` branch (rev d2d0cbae): the sm-plans/wasm line
# with `feat/wasm-max-catalog-version` (so `OpenOptions.max_catalog_version` — the
# discovery-version thread — is retained) and its `delta_kernel` bumped to the
# sm-plans-consolidation tip `c7bc4254` (adds the logical scan-file-row terminal +
# `Scan::scan_file_row_schema` accessor and the `FullState::output_schema` accessor
# + FSR terminal projection). Both deps resolve from one git source and
# pin the SAME kernel rev the `olai-delta-df` sibling pins directly, so exactly
# one `delta_kernel` is in the graph and `SnapshotRef` unifies across it.
#
# NOTE (follow-up): async-native construction no longer uses the facade's
# `Snapshot::kernel_snapshot()` accessor or `open_table_with_store`; the
# deltalake-wasm/-core deps remain only for a now-dead `Error::Delta` variant and
# are slated for removal (see the M3 follow-up issue).
[dependencies]
deltalake-wasm = { git = "https://github.com/roeap/delta-rs", rev = "d2d0cbae3219b04338551949ed7eaf4181255170" }
deltalake-core = { git = "https://github.com/roeap/delta-rs", rev = "d2d0cbae3219b04338551949ed7eaf4181255170", default-features = false, features = [
  "datafusion",
] }

# The async-native (sm_plans-driven) Delta TableProvider — the replacement for the
# eager `DeltaScanNext` + InlineExecutor scan path. It lives in the repo ROOT
# workspace (`crates/olai-delta-df`), so this is a cross-workspace `path` dep. Both
# workspaces pin the same arrow fork + kernel rev, so the crate resolves identically
# here; this workspace's `[patch.crates-io]` applies to it when built in this lock,
# unifying its `delta_kernel` types with what `deltalake-wasm` returns.
olai-delta-df = { path = "../olai-delta-df" }

# The canonical Unity Catalog crates, now wasm-capable (PRs #150/#151): the
# object-store factory drives the real MicrosoftAzure store over object_store's
# browser-Fetch transport, and the client vends credentials + loads Delta table
# metadata. These live in the repo ROOT workspace, so they are cross-workspace
# `path` deps (like olai-delta-df); their `workspace = true` deps resolve against
# the root workspace that owns their manifests, and this workspace's object_store
# `[patch.crates-io]` unifies the store type across the whole graph. Default
# features off mirrors how the object-store crate itself depends on the client.
unitycatalog-object-store = { package = "olai-uc-object-store", path = "../object-store", default-features = false }
unitycatalog-client = { package = "olai-uc-client", path = "../client", default-features = false }
# The Delta v1 wire models (DeltaLoadTableResponse) the loadTable gate reads.
# default-features = false drops the `server` (axum) surface — models only.
unitycatalog-delta-api = { package = "olai-uc-delta-api", path = "../delta-api", default-features = false }

arrow-array = { version = "58" }
arrow-ipc = { version = "58" }
arrow-schema = { version = "58" }
# Feature set copied from the delta-rs wasm workspace: default features minus
# `compression` (async-compression pulls C codecs that cannot build for
# wasm32-unknown-unknown).
datafusion = { version = "54.0.0", default-features = false, features = [
  "nested_expressions",
  "crypto_expressions",
  "datetime_expressions",
  "encoding_expressions",
  "regex_expressions",
  "string_expressions",
  "unicode_expressions",
  "parquet",
  "recursive_protection",
  "sql",
] }
object_store = { version = "0.13.2" }

# Common (native + wasm): the `?Send` async resolve trait lives in `catalog.rs`,
# which is native-visible for tests, so `async-trait` cannot stay wasm-only.
async-trait = { version = "0.1" }
# RFC 1123 / RFC 3339 date parsing in the native-testable directory-list parsers
# (`files/lister.rs`) needs chrono natively too, not just in the wasm fetch store.
chrono = { version = "0.4" }
futures = { version = "0.3" }
percent-encoding = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "2" }
url = { version = "2.5" }

# Native builds of deltalake-core require a TLS backend feature; the wasm target
# needs none (the browser supplies fetch), so re-add it natively only. Mirrors
# deltalake-wasm's own manifest.
[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
deltalake-core = { git = "https://github.com/roeap/delta-rs", rev = "d2d0cbae3219b04338551949ed7eaf4181255170", default-features = false, features = [
  "datafusion",
  "rustls",
] }

# wasm glue: the fetch-backed store, the UC REST client, and the wasm-bindgen
# surface only exist on wasm32-unknown-unknown; everything else compiles (and is
# tested) natively.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
bytes = { version = "1" }
console_error_panic_hook = "0.1"
js-sys = "0.3"
# Kept at 0.13 to match the delta-rs wasm harness; wasm backend = browser fetch.
reqwest = { version = "0.13", default-features = false, features = ["json"] }
send_wrapper = { version = "0.6", features = ["futures"] }
serde-wasm-bindgen = "0.6"
# Pinned exactly: the wasm-bindgen CLI's schema must match this version (the
# `just setup-wasm` recipe installs the same pin — bump both together).
wasm-bindgen = "=0.2.126"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
arrow = { version = "58" }
arrow-cast = { version = "58", features = ["prettyprint"] }

# tokio's multi-threaded runtime does not compile for wasm; the native tests are
# the only ones that need it (and the fixture generator writes parquet natively).
[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dev-dependencies]
parquet = { version = "58", features = ["arrow"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }

# wasm-engine: patch parquet (and the arrow family it pins) to the
# wasm-codec-58.3.0 branch of the arrow-rs fork, pinned by rev — the same patch
# set as the delta-rs wasm workspace. As of rev `dc2acae8` the fork's parquet keeps
# `zstd` in its `default` features but backs it per-target: the C `zstd` crate on
# native, pure-Rust `ruzstd` (decode-only) on wasm. So the graph builds for
# wasm32-unknown-unknown WITH working zstd parquet decode (needed to read
# zstd-compressed data files in the browser); only `brotli` stays dropped on wasm.
# This must stay a patch, not a feature flag: datafusion-datasource-parquet and
# the kernel declare `parquet` without `default-features = false`, and Cargo
# unions features graph-wide. See ../../WASM_QUERY_PREVIEW.md and delta-rs's
# WASM.md for the full rationale.

# The cdylib ships to browsers: optimize release for size. (Further shrinking —
# wasm-opt -Oz, panic=abort — tracked with the browser-verification follow-up.)
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = "debuginfo"

[patch.crates-io]
parquet = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "parquet" }
arrow = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow" }
arrow-arith = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-arith" }
arrow-array = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-array" }
arrow-buffer = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-buffer" }
arrow-cast = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-cast" }
arrow-data = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-data" }
arrow-ipc = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-ipc" }
arrow-json = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-json" }
arrow-ord = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-ord" }
arrow-row = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-row" }
arrow-schema = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-schema" }
arrow-select = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-select" }
arrow-string = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-string" }

# object_store: the roeap fork's 0.13.2-based wasm integration branch (per-target
# reqwest split + wasm-guarded retry sleep). Keeps 0.13.2 semver so delta-rs /
# datafusion resolve; enables the real MicrosoftAzure store on wasm32 (browser
# Fetch transport) so query-wasm can drive canonical `olai-uc-object-store`.
object_store = { git = "https://github.com/roeap/arrow-rs-object-store", rev = "e4676ee087161681413a059b38aa1687bcf1a3c2" }
