[package]
name = "olai-uc-server"
version = "0.0.1"
description = "Unity Catalog REST and gRPC server with pluggable storage backends."
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
# Stable Rust crate identifier, independent of the provisional package name.
name = "unitycatalog_server"

[dependencies]
unitycatalog-common = { package = "olai-uc-common", path = "../common", version = "0.0.1", features = [
  "axum",
  "store",
  "metric-view",
] }
unitycatalog-sharing-client = { package = "olai-uc-sharing-client", path = "../sharing-client", version = "0.0.1", features = [
  "server",
] }
unitycatalog-client = { package = "olai-uc-client", path = "../client", version = "0.0.1", optional = true }

async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
percent-encoding = "2.1"
delta_kernel = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
object_store = { workspace = true }
olai-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { workspace = true }

axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
datafusion = { workspace = true }
futures-util = { version = "0.3.28" }
http = { version = "1.2", optional = true }
olai-store = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower = { workspace = true, features = ["make"], optional = true }

# in-memory handler dependencies (in alphabetical order)
dashmap = { workspace = true, optional = true }
uuid = { workspace = true, optional = true, features = ["v7"] }

[dev-dependencies]
tempfile = "3.1"
tokio = { version = "1", features = ["full"] }

[features]
default = ["axum", "memory", "grpc"]

axum = ["dep:axum", "dep:axum-extra", "http", "tower"]

# in-memory handler features
memory = ["dashmap", "uuid"]

grpc = ["tonic"]

# reusable handler patterns: proxy leaves + UC-client connector
proxy = ["dep:unitycatalog-client"]
federation = ["proxy"]

# Gates the Azurite credential-vending integration test
# (`tests/credential_vending_azurite.rs`). Requires a running Azurite blob
# emulator; run with `just integration-azurite`.
integration-azurite = ["memory"]
